--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - fast-histogram
     - boost-histogram
     - lmfit
-    - protobuf
+    - protobuf<5
     - shapely !=2.0.0,!=2.0.1
     - networkx
     - scikit-learn
