--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ requirements:
     - networkx
     - numpy >1.20.0
     - pandas
-    - protobuf >6.31.1
+    - protobuf >=6.31.1
     - qtpy !=2.3.0
     - ruamel.yaml
     - scikit-image
